10/11/06 - Added "bug" command. 10/11/06 - Changed LinkedLists to synchronized Vectors to stop concurrentmodification errors. Upgrade to version .86 10/12/06 - Changed "consider" command to be more helpful.